# mdmt-architecture

./: Cargo.toml  config.yaml
cgraph-macros/: Cargo.toml
context-macros/: Cargo.toml
sal-context-macros/: Cargo.toml
use-context/: Cargo.toml
use-context/src/: main.rs
use-context/src/algorithm/: apparent_frequencies_ctx.rs  bound.rs  bounds.rs  data_array.rs  load.rs  mod.rs  parameters.rs  position.rs  serde_parser.rs  ship.rs  ship_type.rs  unit.rs
use-context/src/algorithm/unit_area/: ctx.rs  eval.rs  mod.rs
use-context/src/conf/: conf.rs  mod.rs
use-context/src/context/: context.rs  initial.rs  initial_ctx.rs  mod.rs
use-context/src/domain/: mod.rs
use-context/src/domain/calculation_graph/: mod.rs
use-context/src/domain/conf/: conf.rs
use-context/src/domain/context/: context.rs  context_transaction.rs  initial.rs  initial_ctx.rs  mod.rs  raw_context.rs
use-context/src/domain/project_tree/: mod.rs  project_node.rs  project_node_kind.rs  project_node_state.rs  project_node_status.rs  project_nodes.rs  project_tree.rs  project_tree_conf.rs
use-context/src/domain/snapshot/: mod.rs  snapshot.rs
use-context/src/kernel/: mod.rs  request.rs  request_async.rs
use-context/src/kernel/eval/: eval.rs  eval_ex.rs  eval_mut.rs  mod.rs
use-context/src/kernel/event/: mod.rs
use-context/src/kernel/sync/: hub.rs  link.rs  link_sender.rs  mod.rs  switch.rs
use-context/src/kernel/types/: channel.rs  eval_result.rs  fx_map.rs  mod.rs  sync.rs
use-context/src/project_tree/: mod.rs  project_tree.rs
use-context/src/snapshot/: mod.rs  snapshot.rs
(+4 files in other folders)
