[package]
name = "mdmt-architecture"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "~0.4"

#
# Internal
testing = { git = "https://github.com/a-givertzman/rust-testing.git", tag = "0.1.2" }
debugging = { git = "https://github.com/a-givertzman/rust-debuging.git", tag = "0.1.0" }
api-tools = { git = "https://github.com/a-givertzman/rust-api-tools.git", tag = "0.2.2" }
sal-core = { git = "https://github.com/a-givertzman/rust-sal-core.git", tag = "0.1.0" }
sal-sync = { git = "https://github.com/a-givertzman/rust-sal-sync.git", tag = "0.3.1" }
sal-context-macros = { path = "../sal-context-macros" }

#
# Serde
serde = { version = "~1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "~1.0"
bincode = { version = "~2.0", features = ["std"] }

#
# Math
# splines = "~5.0"
nalgebra = "~0.34"

#
# Helpful macros for working with enums and strings
strum = "~0.28"
strum_macros = "~0.28"

#
# Thread safe
kanal = "~0.1"
papaya = "~0.2"
parking_lot = "~0.12"

#
# Diagnistic
get-size = { version = "^0.1", features = ["derive"] }
